--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -530,8 +530,8 @@
         .navigation-menu {
             .has-submenu {
                 .menu-arrow {
-                    right: 16px;
-                    top: 16px;
+                    right: 160px;
+                    top: 160px;
                 }
             }
         }
